<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- The Title -->
        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <!-- Category Spinner -->
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:minHeight="48dp" />

        <!-- Location Text -->
        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/location"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <!-- The Date -->
        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/select_date"
            android:minHeight="48dp"
            android:inputType="date"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <!-- Time -->
        <EditText
            android:id="@+id/etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/select_time"
            android:minHeight="48dp"
            android:inputType="time"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <!-- Save Button -->
        <Button
            android:id="@+id/btnSave"
            android:text="@string/save_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>