<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <!-- Category Spinner -->
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp" />

        <!-- Location Input -->
        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/location2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <!-- Date -->
        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/date_yyyy_mm_dd"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <!-- Time input -->
        <EditText
            android:id="@+id/etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="time"
            android:hint="@string/time"
            android:minHeight="48dp"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

    </LinearLayout>
</ScrollView>